--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "express": "^4.16.2",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "random-username-generator": "^1.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-icons": "^2.2.7",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^3.3.0",
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
@@ -19,5 +19,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start:prod": "node server"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
