Modified the Express backend to use just REST and threw out all the websockets stuff, in preparation for the Cloud Run deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             - ./frontend:/frontend
             - frontend-deps:/frontend/node_modules
     backend:
+        command: npm start
         build:
             context: ./backend
         ports:
