--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend for real-time Buzzword Bingo app.",
-  "main": "index.js",
+  "main": "src",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "start:prod": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
-    "socket.io": "^2.0.4"
+    "morgan": "^1.9.1",
+    "statuses": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.1"
