--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "src",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "start:prod": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "start:prod": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
