--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.1",
     "classnames": "^2.2.5",
     "express": "^4.16.2",
     "morgan": "^1.9.1",
@@ -10,8 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^2.2.7",
-    "react-scripts": "^3.3.0",
-    "socket.io-client": "^2.0.4"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
