Set a max number of instances for the backend service.

--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -20,6 +20,8 @@ steps:
         - "--platform"
         - "managed"
         - "--allow-unauthenticated"
+        - "--max-instances"
+        - "1"
 
 timeout: 1800s
 images: ["gcr.io/$PROJECT_ID/thebuzzwordbingo-backend:$COMMIT_SHA"]
