Added a max instance restriction of 1 to the Frontend Cloud Run service.

--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -20,6 +20,8 @@ steps:
         - "--platform"
         - "managed"
         - "--allow-unauthenticated"
+        - "--max-instances"
+        - "1"
         - "--set-env-vars"
         - "BACKEND_HOST=${_BACKEND_HOST},BACKEND_PORT=443,BACKEND_PROTOCOL=https"
 
